--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    #if: github.event.pull_request.merged && startsWith(github.head_ref, 'RC')
-    if: success() && github.ref == 'refs/heads/main'
+#    if: github.event.pull_request.merged && startsWith(github.head_ref, 'RC')
+    if: success() && github.ref == 'refs/heads/main' && startsWith(github.head_ref, 'RC')
     steps:
       - uses: actions/checkout@master
       - name: Tag and prepare release
         id: tag_and_prepare_release
         uses: K-Phoen/semver-release-action@master
         with:
-          release_branch: main
+          release_branch: master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload release notes
