--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 #    if: github.event.pull_request.merged && startsWith(github.head_ref, 'RC')
-    if: success() && github.ref == 'refs/heads/main' && startsWith(github.head_ref, 'RC')
+    if: (success() && github.ref == 'refs/heads/main') && startsWith(github.head_ref, 'RC')
     steps:
       - uses: actions/checkout@master
       - name: Tag and prepare release
