--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-#    if: github.event.pull_request.merged && startsWith(github.head_ref, 'RC')
+# #   if: github.event.pull_request.merged && startsWith(github.head_ref, 'RC')
     if: startsWith(github.head_ref, 'RC')
     steps:
       - uses: actions/checkout@master
